--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="es" xml:lang="es" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>Overflow Development</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 			<section id="header">
 				<header>
 					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<p></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
@@ -28,7 +28,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>We are Overflow-Dev</h2>
 				</header>
 				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s responsive, built on HTML5/CSS3, and entirely free<br />
